# capture

./: CMakeLists.txt  LICENSE  README.md
cliloader/: CMakeLists.txt  cliloader.cpp  getopt.c  getopt.h
core/capture/: CMakeLists.txt  capture.cpp
core/common/: CMakeLists.txt
core/common/api/: capture.h  xrt_device.cpp
core/include/xrt/: CMakeLists.txt  xrt_device.h
test/: CMakeLists.txt  main.cpp
